[project]
name = "kb-2315"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kb_2135", email = "kb_2315@example.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true
