[project]
name = "kb-2315"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kb_2135", email = "kb_2315@example.com" }]
dependencies = [
    "toml>=0.10.2",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "line-bot-sdk>=3.5.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.1",
    "types-toml>=0.10.8.7",
    "types-requests>=2.31.0.10",
]

[tool.hatch.metadata]
allow-direct-references = true
